# YQ_InterpolatorAndExtrapolator

./: .gitignore  CMakeLists.txt  Makefile  README.md  YQ_InterpolatorAndExtrapolator  build.sh  combine_results.py  input.yml  submit_job.sh
include/: ExperimentalData.h  InputParameters.h  PolynomialCoefficientsEstimation.h  Utils.h  YAMLParser.h
src/: ExperimentalData.cpp  InputParameters.cpp  PolynomialCoefficientsEstimation.cpp  Utils.cpp  YAMLParser.cpp  YQ_InterpolatorAndExtrapolator  main.cpp
src/YQ_InterpolatorAndExtrapolator.dSYM/Contents/: Info.plist
src/YQ_InterpolatorAndExtrapolator.dSYM/Contents/Resources/DWARF/: YQ_InterpolatorAndExtrapolator
src/YQ_InterpolatorAndExtrapolator.dSYM/Contents/Resources/Relocations/aarch64/: YQ_InterpolatorAndExtrapolator.yml
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
